--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15822,15 +15822,16 @@ Second About Area CSS
 }
 .second-about-items .item h3, .second-about-items .item .h3 {
   font-size: 30px;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
       font-weight: 700;
       color: #004E78;
 }
 .second-about-items .item p {
     margin-bottom: 0;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 400;
     color: #000000 !important;
+font-family: "Helvetica-Bold" !important;
 }
 .second-about-items .item .text {
      margin-bottom: 0;
