--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1501,7 +1501,7 @@ progress {
 @media (min-width: 1400px) {
   .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1293px;
-    padding: 0px;
+    padding: 0px 5px 0px 0px;
   }
 }
 ul.dropdown-menu.show {
