--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -241,7 +241,9 @@ h2, .h2 {
     font-size: 2rem;
   }
 }
-
+.service-overview-area {
+    margin-top: 20px;
+}
 h3, .h3 {
   font-size: calc(1.3rem + 0.6vw);
 }
@@ -16568,9 +16570,12 @@ Service Overview Area CSS
 }
 .service-overview-content {
   padding-left: 0px;
+      width: 650px;
 }
 .service-overview-content {
   padding-left: 0px;
+  width: 544px;
+    height: 436px;
 }
 .search-overview-content h2, .search-overview-content .h2 {
   font-size: 38px;
@@ -16609,6 +16614,7 @@ Service Overview Area CSS
       font-size: 30px !important;
     font-weight: 500 !important;
     color: #004e78;
+  margin: 24px 0px 35px 0px;
 }
 .service-overview-content h3, .service-overview-content .h3 {
   font-size: 1.75rem;
