--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13152,7 +13152,7 @@ Section Title CSS
   color: #004E78;
 }
 .section-title .right p {
-  margin-bottom: 0;
+    margin-top: -10px;
 }
 .section-title .right .link-btn {
   display: inline-flex;
