--- a/src/styles/arabic.css
+++ b/src/styles/arabic.css
@@ -13209,7 +13209,8 @@ Navbar Area CSS
   width: 108px;
     height: 42px;
   border-radius:10px !important;
-  padding: 9px 45px !important;
+  padding: 9px 0px !important;
+  font-size: 18px !important;
 }
 button#extraDropdown {
     border-radius: 10px;
