--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13276,7 +13276,9 @@ a.btn.btn-outline-secondary.btn-language {
 .btn-blog{
  background-color: #004E78 !important;
  border:none !important;
-font-size:14px !important;
+font-size:16px !important;
+  border-radius: 0px;
+    width: 140px;
 }
 .btn-blog:hover {
     background-color:#39bced !important; /* thoda dark shade */
@@ -15486,7 +15488,6 @@ Blog Area CSS
 }
 .blog-card {
   transition: 0.7s;
-      transition: 0.7s;
     padding: 15px;
     border: 1px solid #00000038;
     border-radius: 10px;
@@ -16523,6 +16524,8 @@ Service Overview Area CSS
   background-color: #fff;
   font-weight: 600;
   height: 44px;
+    color: rgb(117, 117, 117);
+    margin-bottom: 0px;
 }
 
 /* Location Dropdown */
@@ -16556,7 +16559,7 @@ width: 163px;
 }
 
 .search-button:hover {
-  background: #444; /* halka hover effect */
+  background: #39bced; 
 }
 
 
