--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -50,8 +50,7 @@
 }
 .blog-card {
     transition: 0.7s;
-    transition: 0.7s;
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
     border: 1px solid #00000038;
     border-radius: 10px;
     margin: 10px 0px;
