--- a/src/styles/arabic.css
+++ b/src/styles/arabic.css
@@ -13211,8 +13211,9 @@ Navbar Area CSS
   width: 108px;
     height: 42px;
   border-radius:10px !important;
-  padding: 9px 0px !important;
-  font-size: 18px !important;
+  padding: 9px 0px;
+  font-size: 18px ;
+    font-family: Helvetica, sans-serif !important;
 }
 button#extraDropdown {
     border-radius: 10px;
