--- a/src/styles/arabic-responsive.css
+++ b/src/styles/arabic-responsive.css
@@ -128,10 +128,10 @@ html, body {
     padding-bottom: 20px;
   }
   .section-title {
-    margin-bottom: 35px;
+    margin-bottom: 20px;
   }
   .section-title .left h2 {
-    font-size: 20px;
+    font-size: 18px;
   }
   .section-title .right.wrap2 {
     text-align: start;
@@ -289,7 +289,7 @@ html, body {
     font-size: 12px;
 }
   .service-card .top h3 {
-    font-size: 16px;
+    font-size: 14px !important;
     margin-bottom: 15px;
   }
   .service-card .bottom {
@@ -2153,8 +2153,32 @@ html, body {
   margin-bottom: 12px;
   color: #004E78;
 }
+.blog-area {
+    margin: 0px 10px;
+}
 .partner-area {
     margin: 0px 10px;
+}
+.blog-card {
+    height: 100%;
+    min-height: auto !important
+}
+.how-it-work-card {
+    padding: 0px;
+    margin-top: -30px;
+    margin-bottom: 30px;
+}
+.how-it-works-area
+ {
+    padding:18px 10px;
+}
+.blog-card .image {
+    height: auto !important;
+    overflow: hidden;
+}
+.blog-text {
+    margin: 0px 0px 15px;
+    font-size: 12px;
 }
 .service-overview-area {
     margin: 0px 10px;
