--- a/src/styles/arabic.css
+++ b/src/styles/arabic.css
@@ -15817,7 +15817,7 @@ Second About Area CSS
   margin-bottom: 15px;
 }
 .second-about-content h2, .second-about-content .h2 {
-  font-size: 32px;
+  font-size: 32px !important;
   margin-bottom: 0;
   line-height: 1.3;
 }
@@ -15842,11 +15842,15 @@ Second About Area CSS
 .second-about-items .item .icon {
   margin-bottom: 15px;
 }
+.second-about-items .item h3 {
+    font-size: 28px !important;
+}
 .second-about-items .item h3, .second-about-items .item .h3 {
   font-size: 30px;
   margin-bottom: 15px;
       font-weight: 700;
       color: #004E78;
+       font-size: 28px !important;
 }
 .second-about-items .item p {
     margin-bottom: 0;
