--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -42,6 +42,13 @@ html, body {
     padding-top: 20px;
     padding-bottom: 20px;
   }
+   .btn-blog {
+    background-color: #004e78 !important;
+    border: none !important;
+    font-size: 14px !important;
+    border-radius: 0 !important;
+    width: 140px;
+}
        .second-about-area {
         margin: 20px 10px 0px;
     }
