--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -38,6 +38,36 @@ html, body {
 }
  
 @media only screen and (max-width: 767px) {
+  .doctors-overview-content h2 {
+    font-size: 20px;
+    margin-bottom: 25px;
+    color: #004E78;
+}
+.profile-text {
+    color: #000;
+    border-bottom: 1px solid #0000002b;
+    padding-bottom: 4px;
+    font-size: 14px !important;
+}
+.profile-text-last {
+    color: #000;
+    padding-bottom: 4px;
+    font-size: 14px !important;
+}
+.lang-box {
+    display: inline-block;
+    margin-left: 28px;
+    background: #f1f1f100;
+    color: #000;
+    padding: 4px 30px;
+    font-size: 14px;
+    font-weight: 500;
+    border: 1px solid #ccc;
+}
+.doctors-overview-content
+ {
+    width: 340px;
+}
   .ptb-140 {
     padding-top: 20px;
     padding-bottom: 20px;
